# funcx-web-service

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerrun.aws.json  Makefile  README.md  app.py  application.py  config.py  docker-compose.yml  errors.py  funcx-web-service.env  funcx.sh  mid-service.py  mypy.ini  pyproject.toml  requirements.in  requirements.txt  requirements_test.txt  run_local.sh  tag_and_release.sh  test.py  tox.ini  uwsgi.ini  web-entrypoint.sh
.ebextensions/: auth.config  websockets.config
api/: api.py  api.py.save  auth_api.py  automate_api.py  parsl_apps.py.save  utils.py
authentication/: auth.py
automate_api/: automate_api.py
conf/: app.conf.template
config/: createtables.sql  funcx.conf
dbsetup/: Dockerfile  funcx-schema.sql  setupdb.sh
dockers/: README.md
forwarder/: Dockerfile  README.rst  entrypoint.sh  requirements.txt  setup.py
funcx-gui/: app.py
funcx_web_service/: __init__.py  application.py  config.py  container_service_adapter.py  error_responses.py  errors.py  response.py  task_storage.py  version.py
gui/: __init__.py  forms.py  funcs.db  gui.py  models.py  routes.py
integration_tests/: Tutorial.ipynb  funcX.postman_collection.json  get_valid_token.py  integration_test.py  test_container_function.py  test_container_service.py
migrations/: env.py
models/: search.py  serializer.py  tasks.py  utils.py
routes/: auth.py  automate.py  funcx.py  funcx_v1.py  mapper.html  redis_q.py
scripts/: store_endpoint_info.py  store_usage.py
(+131 files in other folders)
